better configuration api - intial commit (also re-add java 8 support!)